sumo/tests/dfrouter/errors/options_parsing/false_space3/errors.dfrouter
Error: The parameter 'of' is not allowed in this context
Error: Switch or parameter name expected.
Error: The parameter 'net.net.xml' is not allowed in this context
Error: Switch or parameter name expected.
